--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Author: 					      [author_name]
 Author URI: 				    [author_url]
 Description: 				    Tema basado en Mybooking Theme para [client_name]
 Tags: 						      e-commerce,blog
-Version:            		1.0.1
+Version:            		1.0.2
 Requires at least:  		5.2
 Tested up to:       		5.6.1
 Requires PHP:       		7.2
@@ -18,4 +18,15 @@ Domain Path:        		/languages
 /* Embed the site : hide the navbar */
 .navbar-container {
   display: none
+}
+
+ul.polylang_langswitcher {
+  float: right;
+  margin-right: 1rem;
+}
+
+ul.polylang_langswitcher li.lang-item{
+  display:inline;
+  padding-left: 0;
+  list-style:none;
 }
